--- a/develop/index.ejs
+++ b/develop/index.ejs
@@ -78,7 +78,7 @@
           <h2>フロントエンドエンジニア<span class="typing-text"></span></h2>
           <p>
             現状フロントエンドエンジニアとして勤めています。<br>
-            クライアントの課題解決をもとに提案だったり、より良い実装方法を探したりしています。<br>
+            クライアントの課題解決をもとに提案だったり、<br class="show-sp">より良い実装方法を探したりしています。<br>
             目標を持ち、責任を持って最後までやり抜く人です。<br>
             どんな状況でも、冷静に判断することを心がけています。
           </p>
@@ -132,59 +132,59 @@
             </div>
           </div>
           <div class="skills">
-            <h4 id="skills">My Skills</h4>
+            <h4 id="skills">My Skills（使用頻度）</h4>
             <div class="skill-item">
               <span>HTML</span>
               <div class="skill-bar">
-                <div class="skill-level" style="width: 95%;"></div>
+                <div class="skill-level" style="width: 95%;" data-level="95%"></div>
               </div>
             </div>
             <div class="skill-item">
               <span>PHP</span>
               <div class="skill-bar">
-                <div class="skill-level" style="width: 95%;"></div>
+                <div class="skill-level" style="width: 75%;" data-level="75%"></div>
               </div>
             </div>
             <div class="skill-item">
               <span>CSS</span>
               <div class="skill-bar">
-                <div class="skill-level" style="width: 95%;"></div>
+                <div class="skill-level" style="width: 95%;" data-level="95%"></div>
               </div>
             </div>
             <div class="skill-item">
               <span>JavaScript</span>
               <div class="skill-bar">
-                <div class="skill-level" style="width: 85%;"></div>
+                <div class="skill-level" style="width: 75%;" data-level="75%"></div>
               </div>
             </div>
             <div class="skill-item">
               <span>EJS</span>
               <div class="skill-bar">
-                <div class="skill-level" style="width: 80%;"></div>
+                <div class="skill-level" style="width: 90%;" data-level="90%"></div>
               </div>
             </div>
             <div class="skill-item">
               <span>Node.js</span>
               <div class="skill-bar">
-                <div class="skill-level" style="width: 75%;"></div>
+                <div class="skill-level" style="width: 60%;" data-level="60%"></div>
               </div>
             </div>
             <div class="skill-item">
               <span>gulp</span>
               <div class="skill-bar">
-                <div class="skill-level" style="width: 75%;"></div>
+                <div class="skill-level" style="width: 95%;" data-level="95%"></div>
               </div>
             </div>
             <div class="skill-item">
-              <span>figma</span>
+              <span>Figma</span>
               <div class="skill-bar">
-                <div class="skill-level" style="width: 75%;"></div>
+                <div class="skill-level" style="width: 80%;" data-level="80%"></div>
               </div>
             </div>
             <div class="skill-item">
               <span>Adobe XD, Photoshop & Illustrator</span>
               <div class="skill-bar">
-                <div class="skill-level" style="width: 75%;"></div>
+                <div class="skill-level" style="width: 75%;" data-level="75%"></div>
               </div>
             </div>
           </div>
